fixed a spacing issue at the bottom of the page

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ body {
     margin-top: 2rem;
     max-width: 750px;
     width: 80%;
+    margin-bottom: 6rem;
 }
 
 #emailSubmitForm p {
@@ -365,6 +366,7 @@ footer {
 
 #emailSubmitForm {
     position: relative;
+    margin-bottom: 6rem;
 }
 
 #emailSubmitForm #errorIcon {
@@ -414,11 +416,11 @@ footer {
     #comingSoonSectionContent p {
         width: 80%;
         margin: 2.05rem auto;
-        margin-bottom: 6rem;
     }
     #emailSubmitForm {
         position: relative;
         width: 80%;
         margin: 2rem auto;
+        margin-bottom: 6rem;
     }
 }
